tests/assembler/fail/test1.ial
type automatic Foo
{
    field static const int32 bar;
}
